<resources>
    <string name="app_name">QuanlyAnything</string>
    <string name="ok">Đồng ý</string>
    <string name="error">error</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="text_cancel">Hủy</string>
    <string name="success">Success</string>
    <string name="no_internet_network">No internet!</string>
    <string name="api_err_no_network">No internet connection</string>
    <string name="api_err_time_out">Request time out</string>
    <string name="api_err_unknown_error">Unknown error</string>
    <string name="api_err_request_failed">Request server failed. Please try later.</string>
    <string name="login">Đăng Nhập</string>
    <string name="name_account">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="title_screen_login">Ứng dụng giúp bạn quản lý mọi thứ trở lên dễ dàng hơn.</string>
    <string name="title_screen_option">Hãy chọn một trình quản lý bạn muốn</string>
    <string name="text_kiot">Tiệm tạp hóa</string>
    <string name="text_shop_fashion">Shop thời trang</string>
    <string name="text_logout">Thoát</string>
    <string name="text_back">Trở lại</string>
    <string name="text_report">Báo cáo</string>
    <string name="text_history">Lịch sử</string>
    <string name="text_sell">Bán hàng</string>
    <string name="text_store">Kho hàng</string>
    <string name="add_product">Thêm</string>
    <string name="new_product">Tạo mới</string>
    <string name="name_product">Tên: </string>
    <string name="text_soluong">Số lượng: </string>
    <string name="retail_price_product">Giá lẻ:</string>
    <string name="wholesale_price_product">Giá sỉ:</string>
    <string name="text_search">Tìm kiếm</string>
    <string name="text_unit">Đơn vị:</string>
    <string name="text_hint_unit">đơn vị</string>
    <string name="text_exam_unit">ví dụ kg,tấn,tạ,hộp,thùng</string>
    <string name="text_save">Lưu lại</string>
    <string name="text_choose">Chọn</string>
    <string name="text_scan_code">Quét</string>
    <string name="text_hint_price">giá</string>
    <string name="text_code_product">Mã sản phẩm:</string>
    <string name="text_unit_price">Đơn vị tiền:</string>
    <string name="text_hint_total_quantity">giá / 1 đơn vị</string>
    <string name="text_purchase_price"> Giá mua vào:</string>
    <string name="text_custom">tự nhập</string>
    <string name="text_input_unit">Nhập đơn vị</string>
    <string name="text_flash_on">Tắt đèn</string>
    <string name="text_flash_off">Bật đèn</string>
    <string name="status_product">Trạng thái:</string>
    <string name="text_status_sell">Có bán</string>
    <string name="text_status_not_sell">Tạm dừng</string>
    <string name="error_not_input_quantity_product">Bạn chưa nhập đủ dữ liệu</string>
    <string name="text_name_seller">Tên người bán:</string>
    <string name="text_seller">Người bán:</string>
    <string name="text_add">Thêm</string>
    <string name="text_title_product">Sản phẩm</string>
    <string name="text_quantity_sell_retail">Số lượng bán lẻ:</string>
    <string name="text_quantity_sell_wholesale">Số lượng bán sỉ:</string>
    <string name="text_total_price">Tổng giá:</string>
    <string name="title_purchase_price">Giá:</string>
    <string name="text_hint_each_price">giá/1 đơn vị</string>
    <string name="text_quantity_wholesale">SL sỉ:</string>
    <string name="text_quantity_retail">SL lẻ:</string>
    <string name="text_delete">Xóa</string>
    <string name="text_unit_product">Đơn vị sản phẩm:</string>
    <string name="title_new_bill">Tạo Hóa Đơn</string>
    <string name="text_name_client">Người mua:</string>
    <string name="text_btn_completed">Hoàn tất</string>
    <string name="question_delete_product">Bạn có muốn xóa sản phẩm này?</string>
    <string name="question_delete_sell_history_product">Bạn có muốn xóa lịch sử bán hàng này?</string>
    <string name="question_delete_import_history_product">Bạn có muốn xóa lịch sử nhập sản phẩm này?</string>
    <string name="question_delete_bill">Bạn có muốn hủy hóa đơn này?</string>
    <string name="text_total_product">Tổng SP:</string>
    <string name="text_add_bill">Thêm hóa đơn</string>
    <string name="text_import_product">Nhập hàng</string>
    <string name="total_price">Tổng tiền:</string>
    <string name="price_import">Giá mua:</string>
    <string name="title_import_product">Nhập Sản Phẩm</string>
    <string name="question_cancel_import_product">Bạn có muốn hủy nhập đơn hàng này?</string>
    <string name="question_complete_import_product">Bạn có hoàn thành nhập đơn hàng này?</string>
    <string name="question_complete_sell_product">Bạn có hoàn thành bán đơn hàng này?</string>
    <string name="text_quantity">Số lượng:</string>
    <string name="text_fix">Sửa</string>
    <string name="error_not_import_product">Bạn chưa thêm sản phẩm nào.</string>
    <string name="error_not_import_contact">Bạn phải nhập tên và phone.</string>
    <string name="text_date_import">Ngày nhập:</string>
    <string name="text_date_sell">Ngày bán</string>
    <string name="add_new">Thêm mới</string>
    <string name="text_call">Gọi</string>
    <string name="name">Tên:</string>
    <string name="number_phone">Phone:</string>
    <string name="text_desc">Mô tả:</string>
    <string name="text_detail">Chi tiết</string>
    <string name="text_done">Xong</string>
    <string name="date_from">Từ ngày:</string>
    <string name="date_to">Tới ngày:</string>
    <string name="total_buy">Tổng chi:</string>
    <string name="total_sell">Tổng thu:</string>
    <string name="text_total_interest">Tổng tiền lãi:</string>
    <string name="text_total_hole">Tổng tiền lỗ:</string>
    <string name="new_account">Tạo mới một tài khoản</string>
    <string name="vnd">VND</string>

</resources>
