<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="@dimen/margin_left_right_default"
        android:layout_marginStart="@dimen/margin_left_right_default"
        app:cardBackgroundColor="@color/white_color"
        app:cardCornerRadius="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/title_import_product"
                        android:textColor="@color/app_color"
                        android:textSize="@dimen/text_size_title_default" />

                    <Button
                        android:id="@+id/btn_cancel_import"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/bg_btn_logout"
                        android:text="@string/text_cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/white_color"
                        android:textSize="@dimen/text_size_normal_default" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_seller"
                        android:textSize="@dimen/text_size_normal_default" />

                    <quanly_anything_you_want.manage.com.quanlyanything.custom_view.QLEditText
                        android:id="@+id/edt_name_seller"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_height_edt"
                        android:background="@drawable/bg_edt_input_product"
                        android:imeOptions="actionDone"
                        android:paddingEnd="6dp"
                        android:paddingStart="6dp"
                        android:singleLine="true"
                        android:textColor="@color/black_color"
                        android:textSize="@dimen/text_size_normal_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_total_product"
                        android:textSize="@dimen/text_size_normal_default" />

                    <TextView
                        android:id="@+id/tv_total_name_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_btn_grey_border"
                        android:padding="6dp"
                        android:textColor="@color/black_color"
                        android:textSize="@dimen/text_size_normal_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/total_price"
                        android:textSize="@dimen/text_size_normal_default" />

                    <TextView
                        android:id="@+id/tv_total_amount"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_height_edt"
                        android:background="@drawable/bg_btn_grey_border"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textColor="@color/black_color"
                        android:textSize="@dimen/text_size_title_default"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_title_product"
                        android:textColor="@color/black_color"
                        android:textSize="@dimen/text_size_title_default" />

                    <Button
                        android:id="@+id/btn_add_product"
                        android:layout_width="50dp"
                        android:layout_height="34dp"
                        android:layout_gravity="end"
                        android:background="@drawable/bg_btn_pressed_blue_bluetrans_stroke_orange"
                        android:text="@string/text_add"
                        android:textAllCaps="false"
                        android:textColor="@color/white_color"
                        android:textSize="@dimen/text_size_normal_default" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcv_list_product"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_completed"
                    android:layout_width="70dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/bg_btn_pressed_green_greentrans"
                    android:text="@string/text_btn_completed"
                    android:textAllCaps="false"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/text_size_normal_default" />

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>
</LinearLayout>