<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white_color"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="8dp"
            android:background="@color/white_color"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_date_import"
                    android:textSize="@dimen/text_size_title_default" />

                <TextView
                    android:id="@+id/tv_date_import"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_size_title_default"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_delete_import_history"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_btn_logout"
                    android:text="@string/text_delete"
                    android:textAllCaps="false"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_normal_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_name_client"
                    android:textSize="@dimen/text_size_normal_default" />

                <TextView
                    android:id="@+id/tv_name_seller"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height_edt"
                    android:background="@drawable/bg_btn_grey_border"
                    android:gravity="center_vertical"
                    android:paddingEnd="6dp"
                    android:paddingStart="6dp"
                    android:singleLine="true"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_size_normal_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_total_product"
                    android:textSize="@dimen/text_size_normal_default" />

                <TextView
                    android:id="@+id/tv_total_name_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_grey_border"
                    android:padding="6dp"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_size_normal_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:textSize="@dimen/text_size_normal_default" />

                <TextView
                    android:id="@+id/tv_total_amount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height_edt"
                    android:background="@drawable/bg_btn_grey_border"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_size_title_default"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_show_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_input_product"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/text_title_product"
                    android:textSize="@dimen/text_size_normal_default" />

                <ImageView
                    android:id="@+id/imv_drop_down"
                    android:layout_width="20dp"
                    android:layout_height="14dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_back_blue" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>

