<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_screen_tap_hoa"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="@dimen/margin_left_right_default"
        android:layout_marginStart="@dimen/margin_left_right_default"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="56dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_btn_logout"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_normal_default" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="56dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_btn_pressed_green_greentrans"
            android:text="Xong"
            android:textAllCaps="false"
            android:textColor="@color/app_color"
            android:textSize="@dimen/text_size_normal_default" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ln_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <quanly_anything_you_want.manage.com.quanlyanything.custom_view.QLEditText
            android:id="@+id/edt_search_product"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edt_input_search"
            android:gravity="center_vertical"
            android:hint="@string/text_search"
            android:inputType="text"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:imeOptions="actionSearch"
            android:paddingStart="10dp"
            android:scrollbars="horizontal"
            android:singleLine="true"
            android:textColor="@color/app_color"
            android:textColorHint="@color/transparent_dialog"
            android:textSize="@dimen/text_size_normal_default"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_scan_product"
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_btn_pressed_blue_bluetrans_stroke_orange"
            android:text="@string/text_scan_code"
            android:textAllCaps="false"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_normal_default" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_list_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />
</LinearLayout>
